objects/LG_Riders__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>This field holds the date from which the Rider is effective.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This field holds the End date for the Rider.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FundingValue__c</fullName>
        <label>FundingValue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>ASO/FI</fullName>
                </value>
                <value>
                    <fullName>ASO-FI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GROUP_SIZE__c</fullName>
        <description>This field indicates the Group size of the Rider.</description>
        <label>GROUP SIZE</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PORTFOLIO_YEAR__c</fullName>
        <description>This field holds the portfolio year for the record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PORTFOLIO YEAR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rider_Id__c</fullName>
        <displayFormat>R-{0000}</displayFormat>
        <label>Rider Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SEGMENT__c</fullName>
        <description>This field holds the segment with which the Rider is associated.</description>
        <label>SEGMENT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATE__c</fullName>
        <description>This field holds the State of the Rider.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>STATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VARIATION_NAME__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>VARIATION NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LG_Rider</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Riders Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LG_Riders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>